[package]
name = "wren-core"
include = ["src/**/*.rs", "Cargo.toml"]
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[lib]
name = "wren_core"
path = "src/lib.rs"

[features]
default = ["multi-thread"]
# Enable multi-threaded tokio runtime (required for sync transform_sql).
# Disable for WASM builds where only single-threaded async is available.
multi-thread = ["tokio/rt-multi-thread"]

[dependencies]
async-trait = { workspace = true }
csv = "1.3.0"
datafusion = { workspace = true, features = [
    "nested_expressions",
    "crypto_expressions",
    "datetime_expressions",
    "encoding_expressions",
    "regex_expressions",
    "unicode_expressions",
] }

datafusion-session = { workspace = true }
env_logger = { workspace = true }
itertools = "0.15.0"
log = { workspace = true }
parking_lot = "0.12.3"
petgraph = "0.8.2"
petgraph-evcxr = "*"
regex = "1.10.5"
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
wren-core-base = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
